k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  annotations:
    checkov.io/skip1: CKV_K8S_43=Using image tags is preferred for dev environment
  namespace: devsecops
  labels:
    app: flask-api
    tier: backend
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
        tier: backend
        version: v1
    spec:
      # Pod level security
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      volumes:
      - name: secrets-store
        secret:
          secretName: flask-api-secret
      - name: tmp-volume
        emptyDir: {}
      containers:
        - name: flask-api
          image: oelmaamar/flask-api:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: secrets-store
            mountPath: "/etc/secrets"
            readOnly: true 
          # tmp directory for flash cache or logs
          - name: tmp-volume
            mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true # Fixes CKV_K8S_22
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          volumeMounts:
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: tmp
          emptyDir: {}
