k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  namespace: devsecops
spec:
  type: NodePort
  selector:
    app: flask-api
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
