k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-api-policy
  namespace: devsecops
spec:
  podSelector:
    matchLabels:
      app: flask-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {} 
      ports:
        - protocol: TCP
          port: 5000
